@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.421 2019/07/31 13:26:42 brook Exp $
+# $NetBSD: Makefile,v 1.422 2019/07/31 13:28:23 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -87,6 +87,7 @@ SUBDIR+=	R-randomForest
 SUBDIR+=	R-relimp
 SUBDIR+=	R-reshape2
 SUBDIR+=	R-rstudioapi
+SUBDIR+=	R-sandwich
 SUBDIR+=	R-sgeostat
 SUBDIR+=	R-shapefiles
 SUBDIR+=	R-sp
