@@ -1,0 +1,2 @@
+Model-robust standard error estimators for cross-sectional, time
+series, clustered, panel, and longitudinal data.
