@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:28:23 brook Exp $
+
+SHA1 (R/sandwich_2.5-1.tar.gz) = acaf9914ed1a0674033e701b10a4e4733a5b4634
+RMD160 (R/sandwich_2.5-1.tar.gz) = ccdc868f90c92016d5b1baf5e76a107a8fc2082c
+SHA512 (R/sandwich_2.5-1.tar.gz) = 381a4f3f1252e61796744a0d15ce1a118e4a0d4d06325294617fee77e4080e37a0832794d03e1478b7a897058693a50a5c0e59591f445517590f7772c7fd7d04
+Size (R/sandwich_2.5-1.tar.gz) = 1349536 bytes
