@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3111 2019/07/31 13:26:42 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3112 2019/07/31 13:28:23 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5068,3 +5068,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-nortest version 1.0.4 [brook 2019-07-31]
 	Added math/R-relimp version 1.0.5 [brook 2019-07-31]
 	Added math/R-rstudioapi version 0.10 [brook 2019-07-31]
+	Added math/R-sandwich version 2.5.1 [brook 2019-07-31]
